# gravity

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  justfile  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  rust-tests.yml
cmd/gravity/: Cargo.toml  build.rs
cmd/gravity/src/: lib.rs  main.rs
cmd/gravity/src/codegen/: bindings.rs  exports.rs  factory.rs  func.rs  imports.rs  ir.rs  mod.rs  wasm.rs
cmd/gravity/src/go/: comment.rs  docs.rs  embed.rs  identifier.rs  imports.rs  mod.rs  operand.rs  result.rs  type.rs
cmd/gravity/tests/cmd/: basic.stdout  basic.toml  iface-method-returns-string.stdout  iface-method-returns-string.toml  instructions.stdout  instructions.toml  missing-world.stderr  missing-world.toml  outlier.stdout  outlier.toml  records.stdout  records.toml  resources-simple.stdout  resources-simple.toml  tuples.stdout  tuples.toml
cmd/gravity2/: Cargo.toml
cmd/gravity2/src/: main.rs
crates/gravity-codegen/: Cargo.toml
crates/gravity-codegen/src/: bindings.rs  context.rs  exports.rs  factory.rs  imports.rs  lib.rs  types.rs
crates/gravity-codegen/src/instructions/: basic.rs  enum_handler.rs  list.rs  mod.rs  option.rs  record.rs  result.rs  string.rs  variant.rs
crates/gravity-go/: Cargo.toml
crates/gravity-go/src/: embed.rs  formatter.rs  identifier.rs  lib.rs  types.rs
crates/gravity-wit/: Cargo.toml
crates/gravity-wit/src/: lib.rs  resolver.rs
docs/: refactoring-plan.md  resources-plan.md
examples/: .gitignore  README.md  examples.rs  examples.wit  generate.go
examples/basic/: Cargo.toml  basic_test.go
examples/basic/src/: lib.rs
examples/basic/wit/: basic.wit
examples/comprehensive/: Cargo.toml  comprehensive_test.go
examples/comprehensive/src/: lib.rs
examples/comprehensive/wit/: comprehensive.wit
examples/go/: basic_test.go  gen-guest.sh
examples/go/guest/: go.mod  go.sum  main.go
examples/go/guest/arcjet/basic/basic/: abi.go  basic.exports.go  basic.wasm.go  basic.wit.go
examples/go/guest/arcjet/basic/logger/: logger.wasm.go  logger.wit.go
examples/iface-method-returns-string/: Cargo.toml  example_test.go
examples/iface-method-returns-string/src/: lib.rs
examples/iface-method-returns-string/wit/: example.wit
examples/instructions/: Cargo.toml  instructions_test.go
examples/instructions/src/: lib.rs
examples/instructions/wit/: instructions.wit
examples/outlier/: Cargo.toml  outlier_test.go
examples/outlier/src/: lib.rs
examples/outlier/wit/: world.wit
examples/records/: Cargo.toml  records_test.go
examples/records/src/: lib.rs
examples/records/wit/: records.wit
examples/resources/: Cargo.toml  resources_test.go
examples/resources-simple/: Cargo.toml  resources.go  resources_test.go
examples/resources-simple/src/: lib.rs
examples/resources-simple/wit/: world.wit
examples/resources/src/: lib.rs
examples/resources/wit/: resources.wit
examples/tuples/: Cargo.toml  basic_test.go
examples/tuples/src/: lib.rs
examples/tuples/wit/: tuple.wit
src/: main.rs
