[workspace]
resolver = "2"
members = ["cmd/*", "crates/*", "examples/*"]

[workspace.dependencies]
# Core dependencies with consistent versions
wit-bindgen-core = "=0.42.1"
wit-component = "=0.230.0"
genco = "=0.17.10"
anyhow = "1.0"
heck = "0.5"
clap = { version = "=4.5.47", features = ["derive"] }

[patch.crates-io]
# rand 0.9 merged into main, waiting for a new release.
argmin = { git = "https://github.com/argmin-rs/argmin", branch = "main" }
argmin-math = { git = "https://github.com/argmin-rs/argmin", branch = "main" }

# Depends on rv PR and release (see below).
changepoint = { git = "https://github.com/sd2k/changepoint", branch = "patched-deps-to-bump-rand" }
# See PR at https://github.com/promised-ai/rv/pull/48.
rv = { git = "https://github.com/sd2k/rv", branch = "bump-rand-dependency" }

# See PR at https://github.com/statrs-dev/statrs/pull/331.
statrs = { git = "https://github.com/RobertJacobsonCDC/statrs", branch = "update_rand_to_09" }

# Depends on cap-rand PR/release (see below).
wasmtime = { git = "https://github.com/sd2k/wasmtime", branch = "bump-rand" }
wasmtime-wasi = { git = "https://github.com/sd2k/wasmtime", branch = "bump-rand" }
wasmtime-wasi-io = { git = "https://github.com/sd2k/wasmtime", branch = "bump-rand" }
# See PR at https://github.com/bytecodealliance/cap-std/pull/394
cap-rand = { git = "https://github.com/sd2k/cap-std", branch = "bump-rand" }
