[workspace]
resolver = "3"
members = ["cmd/*", "examples/*"]
exclude = ["examples/go"]

[patch.crates-io]
# # meanwhile, had to fork to add a feature flag for timers
# argmin = { git = "https://github.com/sd2k/argmin", branch = "timer-feature" }
# argmin-math = { git = "https://github.com/sd2k/argmin", branch = "timer-feature" }

# # Depends on rv PR and release (see below).
# changepoint = { git = "https://github.com/sd2k/changepoint", branch = "remove-rayon" }
# # See PR at https://github.com/promised-ai/rv/pull/48.
rv = { git = "https://github.com/sd2k/rv", branch = "bump-rand-dependency" }

# # See PR at https://github.com/statrs-dev/statrs/pull/331.
# statrs = { git = "https://github.com/RobertJacobsonCDC/statrs", branch = "update_rand_to_09" }

# # Depends on cap-rand PR/release (see below).
# wasmtime = { git = "https://github.com/sd2k/wasmtime", branch = "bump-rand" }
# wasmtime-wasi = { git = "https://github.com/sd2k/wasmtime", branch = "bump-rand" }
# wasmtime-wasi-io = { git = "https://github.com/sd2k/wasmtime", branch = "bump-rand" }
# # See PR at https://github.com/bytecodealliance/cap-std/pull/394
# cap-rand = { git = "https://github.com/sd2k/cap-std", branch = "bump-rand" }
