[package]
name = "gravity"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gravity"
path = "src/main.rs"

[dependencies]
gravity-go = { path = "../../crates/gravity-go" }
gravity-codegen = { path = "../../crates/gravity-codegen" }
gravity-wit = { path = "../../crates/gravity-wit" }
genco = { version = "0.17" }
wit-parser = "0.220"
wit-component = "0.220"
wasmparser = "0.220"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
heck = "0.5"

[build-dependencies]
rustversion = "=1.0.22"
