[package]
name = "gravity"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gravity"
path = "src/main.rs"

[dependencies]
gravity-go = { path = "../../crates/gravity-go" }
gravity-codegen = { path = "../../crates/gravity-codegen" }
gravity-wit = { path = "../../crates/gravity-wit" }
genco = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
heck = { workspace = true }

[build-dependencies]
rustversion = "=1.0.22"
