[package]
authors = ["The Arcjet team"]
categories = ["wasm"]
default-run = "gravity"
name = "arcjet-gravity"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/arcjet/gravity"
description = """
Gravity is a host generator for WebAssembly Components. It currently targets Wazero, a zero dependency WebAssembly runtime for Go.
"""
rust-version = "1.88"

[[bin]]
name = "gravity"
path = "src/main.rs"

# This tests requires the example Wasm files to be built, so we don't
# run it by default as part of `cargo test` (we set `test = false` below).
# Run it explicitly using `cargo test --test cli`.
[[test]]
name = "cli"
path = "tests/cli.rs"
test = false

[dependencies]
clap = "=4.5.47"
genco = "=0.18.1"
wit-bindgen-core = "=0.42.1"
wit-component = "=0.230.0"

[dev-dependencies]
# Cutting out `filesystem` feature
trycmd = { version = "=0.15.10", default-features = false, features = ["color-auto", "diff"] }
wit-bindgen = "=0.42.1"
