[package]
name = "gravity-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
gravity-go = { path = "../gravity-go" }
gravity-wit = { path = "../gravity-wit" }
genco = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
